# equation_permute

./: .gitignore  LICENSE  README.md  equation_permuter.py  go.py  out.py  permuted_equations.py  pyeqn_validator.py  pyproject.toml  universal_formatter.py  vakyume.py  vakyume2.py
chapters/: 01_vacuum_theory.py
pyeqn_examples/: simple.pyeqn
real_examples/: fluid_flow_vacuum_lines.pyeqn  press_mgmt.pyeqn
tests/: linear_eqn.pyeqn  quad_eqn.pyeqn  universal_gas_law.py
