[tool.poetry]
name = "equation_solver"
version = "0.1.0"
description = "A tool for generating and analyzing mathematical equations."

[tool.poetry.dependencies]
python = "^3.8"
sympy = "^1.8"
argparse = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
