[tool.poetry]
name = "equation_solver"
version = "0.1.0"
description = "A tool for generating and analyzing mathematical equations."
authors = ["Julián Henry"]

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.7.3"
argparse = "^1.1.0"
scipy = "^1.9"
black = "^23.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
